--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
           </ul>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__title">2023 © Spots</div>
+      </footer>
     </div>
   </body>
 </html>
