2nd iteration of updated code after review

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="html, css, ???" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>Document</title>
+    <title>Spots</title>
   </head>
   <body>
     <div class="page">
@@ -108,7 +108,7 @@
         </section>
       </main>
       <footer class="footer">
-        <div class="footer__title">2023 © Spots</div>
+        <h1 class="footer__title">2023 © Spots</h1>
       </footer>
     </div>
   </body>
