--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </button>
           </div>
           <button type="button" class="profile__add-btn">
-            <img src="./images/Group 26.svg" alt="Plus icon" />New Post
+            <img src="./images/Group%2026.svg" alt="Plus icon" />New Post
           </button>
         </section>
         <section class="cards page__section">
@@ -108,7 +108,7 @@
         </section>
       </main>
       <footer class="footer">
-        <h1 class="footer__title">2023 © Spots</h1>
+        <h2 class="footer__title">2023 © Spots</h2>
       </footer>
     </div>
   </body>
