--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <footer class="footer">
         <h2 class="footer__title">2023 © Spots</h2>
       </footer>
-      <div class="modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
@@ -138,7 +138,7 @@
         </div>
       </div>
 
-      <div class="modal">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New Post</h2>
@@ -166,5 +166,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
