project spot stage 2 update

--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@
           <h2 class="modal__title">New Post</h2>
           <form class="modal__form">
             <label for="card_image-input" class="modal__label"
-              >Image <link rel="stylesheet" href="" />
+              >Image
               <input
-                id="car-image_input"
+                id="card_image-input"
                 type="url"
                 class="modal__input"
                 placeholder="Place a link to the picture"
               />
             </label>
-            <label for="profile-description-input" class="modal__label"
+            <label for="profile-caption-input" class="modal__label"
               >Caption
               <input
-                id="profile-description-input"
+                id="profile-caption-input"
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
