--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 placeholder="Describe yourself"
               />
             </label>
-            <button type="button" class="modal__submit-btn">save</button>
+            <button type="submit" class="modal__submit-btn">save</button>
           </form>
         </div>
       </div>
@@ -161,7 +161,7 @@
                 placeholder="Type your caption"
               />
             </label>
-            <button type="button" class="modal__submit-btn">save</button>
+            <button type="submit" class="modal__submit-btn">save</button>
           </form>
         </div>
       </div>
