--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 type="text"
                 class="modal__input"
                 placeholder="type your name"
+                required
               />
             </label>
             <label for="profile-description-input" class="modal__label"
@@ -131,6 +132,7 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
+                required
               />
             </label>
             <button type="submit" class="modal__submit-btn">save</button>
