Spots_project_5_final stage_1st_Update

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <li class="card">
                 <button class="card__delete-btn" type="button"></button>
                 <img class="card__image" src="#" alt="" />
-                <div class="card__footer">
+                <div class="card__content">
                   <h2 class="card__title"></h2>
                   <button
                     aria-label="Like card"
@@ -98,6 +98,7 @@
             <label for="card_image-input" class="modal__label"
               >Image
               <input
+                required
                 id="card_image-input"
                 type="url"
                 class="modal__input"
@@ -107,6 +108,7 @@
             <label for="profile-caption-input" class="modal__label"
               >Caption
               <input
+                required
                 id="profile-caption-input"
                 type="text"
                 class="modal__input"
