--- a/index.html
+++ b/index.html
@@ -68,8 +68,11 @@
                 type="text"
                 class="modal__input"
                 placeholder="type your name"
+                minlength="2"
+                maxlength="40"
                 required
               />
+              <span id="profile-name-input-error" class="modal__error"></span>
             </label>
             <label for="profile-description-input" class="modal__label"
               >Description
@@ -78,8 +81,11 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
+                minlength="2"
+                maxlength="200"
                 required
               />
+              <span id="profile-description-input-error" class="modal__error"></span>
             </label>
             <button type="submit" class="modal__submit-btn">save</button>
           </form>
@@ -98,24 +104,30 @@
             <label for="card_image-input" class="modal__label"
               >Image
               <input
-                required
                 id="card_image-input"
                 type="url"
                 class="modal__input"
                 placeholder="Place a link to the picture"
+                required
               />
+              <span id="card_image-input-error" class="modal__error"
+                ></span
+              >
             </label>
             <label for="profile-caption-input" class="modal__label"
               >Caption
               <input
-                required
                 id="profile-caption-input"
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
+                minlength="2"
+                maxlength="30"
+                required
               />
+              <span" id="profile-caption-input-error" class="modal__error"></span>
             </label>
-            <button type="submit" class="modal__submit-btn">save</button>
+            <button type="submit" class="modal__submit-btn modal__submit-btn_disabled" disabled>save</button>
           </form>
         </div>
       </div>
@@ -133,6 +145,7 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/validation.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
