spots_project_sprint_6_1st_review_update

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                 maxlength="200"
                 required
               />
-              <span id="profile-description-input-error" class="modal__error"></span>
+              <span
+                id="profile-description-input-error"
+                class="modal__error"
+              ></span>
             </label>
             <button type="submit" class="modal__submit-btn">save</button>
           </form>
@@ -110,9 +113,7 @@
                 placeholder="Place a link to the picture"
                 required
               />
-              <span id="card_image-input-error" class="modal__error"
-                ></span
-              >
+              <span id="card_image-input-error" class="modal__error"></span>
             </label>
             <label for="profile-caption-input" class="modal__label"
               >Caption
@@ -125,9 +126,18 @@
                 maxlength="30"
                 required
               />
-              <span" id="profile-caption-input-error" class="modal__error"></span>
+              <span
+                id="profile-caption-input-error"
+                class="modal__error"
+              ></span>
             </label>
-            <button type="submit" class="modal__submit-btn modal__submit-btn_disabled" disabled>save</button>
+            <button
+              type="submit"
+              class="modal__submit-btn modal__submit-btn_disabled"
+              disabled
+            >
+              save
+            </button>
           </form>
         </div>
       </div>
