--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,22 @@
     <meta name="author" content="Algie lovelace" />
     <meta name="description" content="" />
     <meta name="keywords" content="html, css, ???" />
-    <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Spots</title>
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/logo.svg" alt="spot logo" class="header__logo" />
+        <img
+          src="<%=require('./images/logo.svg')%>"
+          alt="spot logo"
+          class="header__logo"
+        />
       </header>
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/avatar.jpg"
+            src="<%=require('.//images/avatar.jpg')%>"
             alt="Bessie Coleman"
             class="profile__avatar"
           />
@@ -26,12 +29,17 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/pencil-buttom.svg" alt="Pencil icon" />Edit
-              Profile
+              <img
+                src="<%=require('./images/pencil-buttom.svg')%>"
+                alt="Pencil icon"
+              />Edit Profile
             </button>
           </div>
           <button type="button" class="profile__add-btn">
-            <img src="./images/Group%2026.svg" alt="Plus icon" />New Post
+            <img
+              src="<%=require('./images/Group%2026.svg')%>"
+              alt="Plus icon"
+            />New Post
           </button>
         </section>
         <section class="cards page__section">
@@ -39,7 +47,7 @@
             <template id="card-template">
               <li class="card">
                 <button class="card__delete-btn" type="button"></button>
-                <img class="card__image" src="#" alt="" />
+                <img class="card__image" src="<%=require('#')%>" alt="" />
                 <div class="card__content">
                   <h2 class="card__title"></h2>
                   <button
@@ -150,12 +158,10 @@
             type="button"
             class="modal__close-btn modal__close-btn_type_preview"
           ></button>
-          <img src="#" alt="" class="modal__image" />
+          <img src="<%=require('#')%>" alt="" class="modal__image" />
           <p class="modal__caption">Golden Gate Bridge</p>
         </div>
       </div>
     </div>
-    <script src="./scripts/validation.js"></script>
-    <script src="./scripts/index.js"></script>
   </body>
 </html>
